Version 3.0.0 - 2013-10-21
* Initial release