@@ -8,5 +8,22 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="party.party_view_form"/>
             <field name="name">party_form</field>
         </record>
+
+        <record model="ir.model.field.access" id="access_party_bank_accounts">
+            <field name="field" search="[('model.model', '=', 'party.party'), ('name', '=', 'bank_accounts')]"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.field.access"
+            id="access_party_bank_accounts_bank_admin">
+            <field name="field" search="[('model.model', '=', 'party.party'), ('name', '=', 'bank_accounts')]"/>
+            <field name="group" ref="group_bank_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
     </data>
 </tryton>
