@@ -1,2 +1,4 @@
+* Add default access rights
+
 Version 3.0.0 - 2013-10-21
 * Initial release
